--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
   "action": {
     "default_popup": "./popup/popup.html",
     "default_icon": "./images/icon.png"
-  }
+  },
+  "permissions": ["activeTab", "scripting"]
 }
